--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -3,129 +3,108 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "330445bb-53bb-460b-a1dd-f7edf94844e8",
+   "id": "d35a4ca5-9fc2-4cea-9d3e-310951929bb3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#thuật toán\n",
-    "from sklearn.metrics import accuracy_score\n",
     "import numpy as np\n",
     "class LogisticRegression():\n",
-    "    def __init__(self, X, y , X_valid, y_valid, lr,epochs, reg = False,useoptimizer = False,ismultiClass = False):\n",
-    "        self.X,self.y,  self.X_valid,self.y_valid,self.lr ,self.epochs,self.reg,self.useoptimizer, self.ismultiClass= X, y , X_valid, y_valid, lr, epochs, reg, useoptimizer,ismultiClass\n",
-    "        if(not ismultiClass):            \n",
-    "            self.optim = GradientDesent( X, y , X_valid, y_valid, lr,epochs, reg,useoptimizer, self.sigmoid)\n",
+    "    def __init__(self, X, y ,dolech, sovonglap, sudungoptimizer = False,nhieulop = False):\n",
+    "        self.X=X\n",
+    "        self.y=y\n",
+    "        self.dolech=dolech\n",
+    "        self.sovonglap=sovonglap\n",
+    "        self.sudungoptimizer=sudungoptimizer\n",
+    "        self.nhieulop=nhieulop\n",
+    "        if(not nhieulop):            \n",
+    "            self.hamGD = GradientDesent( X, y, dolech,sovonglap,sudungoptimizer, self.sigmoid())\n",
     "   \n",
     "    def sigmoid(self, z):    \n",
     "        return 1/(1+np.exp(-z))  \n",
     "    \n",
-    "    def fit(self):\n",
-    "        if(self.ismultiClass):\n",
-    "            w=self.fitMulti()\n",
+    "    def huanluyen(self):\n",
+    "        if(self.nhieulop):\n",
+    "            w=self.huanluyenNL()\n",
     "            return w\n",
     "        else:\n",
-    "            w = self.optim.optimize()\n",
-    "            h = self.sigmoid(np.dot(self.X, w))\n",
-    "            h_valid = self.sigmoid(np.dot(self.X_valid, w))\n",
-    "            train_preds = [1 if i > 0.5 else 0 for i in h]\n",
-    "            val_preds = [1 if i > 0.5 else 0 for i in h_valid]\n",
+    "            w = self.hamGD.tinhtoanhang()\n",
     "            return w\n",
-    "            train_accuracy =  accuracy_score(self.y , train_preds)\n",
-    "            val_accuracy =  accuracy_score(self.y_valid , val_preds)\n",
-    "\n",
-    "            print(f'Train Accuracy: {train_accuracy} Val Accuracy: {val_accuracy}')   \n",
     "        \n",
     "        \n",
-    "    def fitMulti(self):\n",
-    "        labelCount = len(np.unique(self.y))\n",
+    "    def huanluyenNL(self):\n",
+    "        solop = len(np.unique(self.y))\n",
     "        #print(f'Total label Count: {labelCount}') \n",
-    "        w = np.zeros((labelCount, self.X.shape[1]))\n",
-    "        for i in range(1, labelCount+1):\n",
-    "            #print(f'Train LG for class : {i}')\n",
-    "            y_change = np.array([1 if i == label else 0 for label in self.y])\n",
-    "            y_valid_change = np.array([1 if i == label else 0 for label in self.y_valid])            \n",
-    "            optim = GradientDesent( self.X, y_change , self.X_valid, y_valid_change, self.lr, self.epochs, self.reg, self.useoptimizer, self.sigmoid)\n",
-    "            w[i-1:] = optim.optimize()                     \n",
-    "            \n",
-    "            \n",
-    "        train_preds = np.argmax(self.sigmoid(np.dot(self.X, w.T)) ,axis = 1) + 1\n",
-    "        val_preds = np.argmax(self.sigmoid(np.dot(self.X_valid, w.T)) ,axis = 1) + 1\n",
+    "        w = np.zeros((solop, self.X.shape[1]))\n",
+    "        for i in range(1, solop+1):\n",
+    "            khoitaoy = np.array([1 if i == label else 0 for label in self.y])          \n",
+    "            hamGD = GradientDesent( self.X, khoitaoy , self.dolech, self.sovonglap, self.sudungoptimizer, self.sigmoid)\n",
+    "            w[i-1:] = hamGD.tinhtoanhang()                     \n",
+    "\n",
     "        return w         \n",
     "        \n",
-    "        train_accuracy =  accuracy_score(self.y , train_preds)\n",
-    "        val_accuracy =  accuracy_score(self.y_valid , val_preds)        \n",
-    "        print(f'Train Accuracy: {train_accuracy} Val Accuracy: {val_accuracy}')\n",
     "\n",
     "    def dudoan(self,dulieu):\n",
-    "        w=self.fit()\n",
+    "        w=self.huanluyen()\n",
     "        ketqua=np.argmax(self.sigmoid(np.dot(dulieu, w.T)) ,axis = 1) + 1\n",
-    "        return ketqua\n",
-    "\n",
-    "import scipy.optimize as opt\n",
-    "class GradientDesent():\n",
-    "    \n",
-    "    def __init__(self, X, y , X_valid, y_valid, lr, epochs, reg = False, useoptimizer = False, activate_fn = None):\n",
-    "        self.X,self.y,  self.X_valid,self.y_valid,self.lr ,self.epochs, self.reg, self.useoptimizer, self.activate_fn  = X, y , X_valid, y_valid, lr,epochs, reg,useoptimizer,activate_fn\n",
-    "            \n",
-    "    def optimize(self):\n",
-    "        w = np.zeros(self.X.shape[1])\n",
-    "              \n",
-    "        \n",
-    "        if(self.useoptimizer):\n",
-    "            result = opt.fmin_tnc(func=self.cost, x0=w, fprime=self.gradient,args=(self.X, self.y)) \n",
-    "            train_loss= self.cost(result[0], self.X, self.y)\n",
-    "            val_loss = self.cost(result[0], self.X_valid, self.y_valid)  \n",
-    "            #print(f'Runned Spicy Optimizer > Train Loss: {train_loss} Val Loss: {val_loss}')          \n",
-    "            return result[0]             \n",
-    "            \n",
-    "        train_cost = np.zeros(self.epochs)\n",
-    "        val_cost = np.zeros(self.epochs)      \n",
-    "\n",
-    "        \n",
-    "        for i in range(self.epochs):\n",
-    "            grad = self.gradient(w, self.X, self.y)\n",
-    "            w = np.subtract(w , np.multiply(grad , self.lr))\n",
-    "            train_loss= self.cost(w, self.X, self.y)\n",
-    "            val_loss = self.cost(w, self.X_valid, self.y_valid)         \n",
-    "            train_cost[i] = train_loss\n",
-    "            val_cost[i] = val_loss\n",
-    "            #print(f'Epochs: {i} Train Loss: {train_loss} Val Loss: {val_loss}')   \n",
-    "            \n",
-    "        \n",
-    "        return w\n",
-    "        # hàm mất mát\n",
-    "    def cost(self,w, X, y):\n",
-    "        h = np.dot(X, w)\n",
-    "        m = len(X)       \n",
-    "        if(self.activate_fn != None):  h = self.activate_fn(h)\n",
-    "        \n",
-    "        loss= (np.dot(-y, np.log(h))) - (np.dot(1-y, np.log(1-h)))\n",
-    "        loss = np.sum(loss)/m\n",
-    "        \n",
-    "        if(self.reg):           \n",
-    "            loss = loss + ((self.lr/2*m) * np.sum(np.power(w,2)))\n",
-    "        return loss\n",
-    "            \n",
-    "    def gradient(self,w,X, y):\n",
-    "        h = np.dot(X, w)      \n",
-    "        if(self.activate_fn != None):  h = self.activate_fn(h)     \n",
-    "        m = len(X)\n",
-    "        loss= h - y\n",
-    "        gradient = np.dot(X.T,loss)/m\n",
-    "        if(self.reg): gradient = gradient + np.dot((self.lr/m), w)      \n",
-    "        return gradient\n"
+    "        return ketqua\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "42d8565f-b5dd-42f6-b21e-775a5521e824",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
-    "tags": []
-   },
+   "id": "b551ef83-56b8-40e9-bc41-69f2be3d392f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "import scipy.optimize as opt\n",
+    "class GradientDesent():\n",
+    "    \n",
+    "    def __init__(self, X, y, dolech, sovonglap, sudungoptimizer = False, ham = None):\n",
+    "        self.X=X\n",
+    "        self.y=y\n",
+    "        self.sovonglap=sovonglap\n",
+    "        self.sudungoptimizer=sudungoptimizer\n",
+    "        self.ham=ham\n",
+    "        \n",
+    "    def tinhtoanhang(self):\n",
+    "        w = np.zeros(self.X.shape[1])\n",
+    "              \n",
+    "        \n",
+    "        if(self.sudungoptimizer):\n",
+    "            result = opt.fmin_tnc(func=self.hammatmat, x0=w, fprime=self.gradient,args=(self.X, self.y))\n",
+    "            return result[0]\n",
+    "        \n",
+    "        for i in range(self.vonglap):\n",
+    "            daohams = self.gradient(w, self.X, self.y)\n",
+    "            w = np.subtract(w , np.multiply(daohams , self.dolech))\n",
+    "        return w\n",
+    "\n",
+    "        # hàm mất mát\n",
+    "    def hammatmat(self,w, X, y):\n",
+    "        h = np.dot(X, w) #X*w\n",
+    "        m = len(X)\n",
+    "        if(self.ham != None):  h = self.ham(h) # thêm hàm sigmoid\n",
+    "        #Tinh toan ham mat nat\n",
+    "        loss= (np.dot(-y, np.log(h))) - (np.dot(1-y, np.log(1-h)))\n",
+    "        loss = np.sum(loss)/m\n",
+    "        return loss\n",
+    "    \n",
+    "\n",
+    "    def gradient(self,w,X, y):\n",
+    "        h = np.dot(X, w) #X*w\n",
+    "        if(self.ham != None):  h = self.ham(h)\n",
+    "        m = len(X)\n",
+    "        loss= h - y\n",
+    "        gradient = np.dot(X.T,loss)/m\n",
+    "        return gradient"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "3f8c4b4c-ec12-4fb4-baa6-e48434b10ae7",
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -200,50 +179,23 @@
       "Humidity                              0.067977  \n",
       "Wind Speed (km/h)                    -0.052082  \n",
       "Visibility (km)                       0.052481  \n",
-      "Pressure (millibars)                  1.000000  \n"
+      "Pressure (millibars)                  1.000000  \n",
+      "precision:  0.442535239749253\n",
+      "recall 0.5698119057486379\n",
+      "accuracy  0.5341071578770292\n",
+      "F1 score 0.49621693273005024\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_14664\\4172205941.py:93: RuntimeWarning: divide by zero encountered in log\n",
-      "  loss= (np.dot(-y, np.log(h))) - (np.dot(1-y, np.log(1-h)))\n",
       "C:\\Users\\Admin\\anaconda3\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1318: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
       "  _warn_prf(average, modifier, msg_start, len(result))\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "precision:  0.44201842276916803\n",
-      "recall 0.5717898492026894\n",
-      "accuracy  0.5314155942467828\n",
-      "F1 score 0.49655804082812105\n",
-      "precision:  0.5629628221866565\n",
-      "recall 0.578591539803554\n",
-      "accuracy  0.5456304146690217\n",
-      "F1 score 0.5679062953364263\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Admin\\anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:814: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
-      "\n",
-      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-      "Please also refer to the documentation for alternative solver options:\n",
-      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-      "  n_iter_i = _check_optimize_result(\n"
      ]
     }
    ],
    "source": [
-    "#Trainning\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
@@ -316,8 +268,6 @@
     "x=df.drop(labels=\"Summary\",axis=1)\n",
     "y=df[\"Summary\"]\n",
     "\n",
-    "\n",
-    "#Lấy code từ đây nhá\n",
     "#X = np.insert(x.to_numpy(), 0,  np.ones(x.to_numpy().shape[0]), axis =1)\n",
     "train_x,test_x,train_y,test_y=train_test_split(x,y,test_size=0.3, train_size=0.7)\n",
     "\n",
@@ -328,7 +278,7 @@
     "\n",
     "\n",
     "\n",
-    "model = LogisticRegression(X_train, y_train,X_valid,y_valid,  lr = 0.001, epochs =100,useoptimizer=True,ismultiClass=True)\n",
+    "model = LogisticRegression(X_train, y_train, dolech =1e-4, sovonglap=1000,sudungoptimizer=True,nhieulop=True)\n",
     "kq=model.dudoan(X_valid)\n",
     "\n",
     "precision=precision_score(y_valid,kq, average='macro')\n",
@@ -340,37 +290,13 @@
     "print('precision: ', precision)\n",
     "print('recall', recall)\n",
     "print('accuracy ',accuracyScore)\n",
-    "print('F1 score', f1Score)\n",
-    "\n",
-    "\n",
-    "clf = linear_model.LogisticRegression()\n",
-    "clf.fit(train_x, train_y)\n",
-    "predicted_y=clf.predict(test_x)\n",
-    "\n",
-    "precision=precision_score(test_y,predicted_y, average='macro')\n",
-    "recall=recall_score(test_y,predicted_y, average='macro')\n",
-    "accuracyScore = accuracy_score(test_y,predicted_y)\n",
-    "f1Score= f1_score(test_y,predicted_y, average='macro')\n",
-    "\n",
-    "\n",
-    "print('precision: ', precision)\n",
-    "print('recall', recall)\n",
-    "print('accuracy ',accuracyScore)\n",
     "print('F1 score', f1Score)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe9ba432-fc6c-433e-90dc-13b71fdff4ca",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4c0a8edf-0e98-4a5b-9f03-f7719c3b0fec",
+   "id": "b378a382-72c0-4dc5-95f0-c5353027a9a0",
    "metadata": {},
    "outputs": [],
    "source": []
