--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -63,6 +63,7 @@
     "    def __init__(self, X, y, dolech, sovonglap, sudungoptimizer = False, ham = None):\n",
     "        self.X=X\n",
     "        self.y=y\n",
+    "        self.dolech=dolech\n",
     "        self.sovonglap=sovonglap\n",
     "        self.sudungoptimizer=sudungoptimizer\n",
     "        self.ham=ham\n",
@@ -75,7 +76,7 @@
     "            result = opt.fmin_tnc(func=self.hammatmat, x0=w, fprime=self.gradient,args=(self.X, self.y))\n",
     "            return result[0]\n",
     "        \n",
-    "        for i in range(self.vonglap):\n",
+    "        for i in range(self.sovonglap):\n",
     "            daohams = self.gradient(w, self.X, self.y)\n",
     "            w = np.subtract(w , np.multiply(daohams , self.dolech))\n",
     "        return w\n",
@@ -179,11 +180,27 @@
       "Humidity                              0.067977  \n",
       "Wind Speed (km/h)                    -0.052082  \n",
       "Visibility (km)                       0.052481  \n",
-      "Pressure (millibars)                  1.000000  \n",
-      "precision:  0.442535239749253\n",
-      "recall 0.5698119057486379\n",
-      "accuracy  0.5341071578770292\n",
-      "F1 score 0.49621693273005024\n"
+      "Pressure (millibars)                  1.000000  \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_8728\\3542733686.py:14: RuntimeWarning: overflow encountered in exp\n",
+      "  return 1/(1+np.exp(-z))\n",
+      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_8728\\2915415377.py:31: RuntimeWarning: divide by zero encountered in log\n",
+      "  loss= (np.dot(-y, np.log(h))) - (np.dot(1-y, np.log(1-h)))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "precision:  0.44400891541133375\n",
+      "recall 0.5742485046496345\n",
+      "accuracy  0.5362099419631592\n",
+      "F1 score 0.49851812459290973\n"
      ]
     },
     {
